keyvdb-kubernetes/keyvdb-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keyvdb-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: keyvdb-minikube.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
                name: keyvdb-service
                port:
                  number: 80
